Fixed decoding for uniswap Swap events
